<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".ui.fragments.MainFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textStyle="bold"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/quiz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_amount"
            android:textColor="#800080"
            android:layout_margin="16dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:textColor="#FF1493"
            android:layout_margin="16dp"
            android:textSize="20sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/amount_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:min="5"
        android:max="50"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="#800080"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:spinnerMode="dropdown"
        android:entries="@array/category"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:textColor="#800080"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/difficulty_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:spinnerMode="dropdown"
        android:entries="@array/difficulty"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:background="@drawable/btn_start"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>


</LinearLayout>